<resources>
    <string name="app_name">StudentApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_logo">App Logo</string>
    <string name="page_title">Page Title</string>

    <!--User Input-->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="new_account">New Account</string>
    <string name="login_account">Login Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="don_t_have_account_sign_up_now">Don\'t Have Account? \nSIGN UP Now.</string>
    <string name="student_id">Student ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit">Edit</string>
    <string name="department">Department</string>
    <string name="year">Year</string>
    <string name="gpa">GPA</string>
    <string name="edit_information">Edit Information</string>
    <string name="add">Add</string>

</resources>
